--- a/updatedPortfolio/package.json
+++ b/updatedPortfolio/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.0.14",
     "@react-spring/parallax": "*",
     "@react-spring/web": "*",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.18.0",
     "react-spring": "^9.7.3",
     "react-visibility-sensor": "^5.1.1"
   },
